# s3q

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  mise.toml  mkdocs.yml  zensical.toml
.buildkite/: pipeline.yml
.buildkite/scripts/: bootstrap.sh
.github/workflows/: ci.yml
docs/: index.md
docs/development/: contributing.md  index.md  setup.md
docs/reference/: cli.md  python-api.md  rust-api.md
docs/user-guide/: index.md
docs/user-guide/api/: cli.md  index.md  python.md  rust.md
docs/user-guide/concepts/: inspection-and-metrics.md  queue-model.md  workflow-model.md
docs/user-guide/getting-started/: quickstart.md
docs/user-guide/guides/: basic-queue.md  delayed-messages.md  index.md  message-lifecycle.md  worker-identity.md
engg/: README.md  product-requirements.md
engg/adr/: 0001-separate-queue-and-workflow-surfaces.md  0002-queue-only-v1.md  README.md  template.md
engg/design/: README.md  api-design.md  implementation-plan.md  initial-architecture.md  queue-architecture.md  repository-setup-plan.md
engg/investigations/: README.md
engg/processes/: README.md
engg/reviews/: README.md
python/: Cargo.toml  README.md  pyproject.toml
python/s3q/: __init__.py  cli.py  client.py  consumer.py  errors.py  inspect.py  producer.py  queue.py  service.py  types.py  workflow.py
python/src/: lib.rs
python/tests/: test_sdk.py
src/: backend.rs  client.rs  config.rs  error.rs  inspect.rs  lib.rs  pgqrs.rs  pgqrs_adapter.rs  queue.rs  store.rs  types.rs  workflow.rs
tests/: s3_integration.rs
