[package]
name = "s3q"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Thin S3-backed queue product layer over pgqrs"
homepage = "https://s3q.dev"
repository = "https://github.com/vrajat/s3q"
readme = "README.md"
keywords = ["s3", "queue", "pgqrs", "object-storage"]
categories = ["asynchronous", "api-bindings"]

[lib]
path = "src/lib.rs"

[features]
default = []
pgqrs-integration = []

[dependencies]
pgqrs = { version = "0.15.2", default-features = false, features = ["s3"] }
serde_json = "1.0"

# For local pgqrs development, temporarily uncomment:
#
# [patch.crates-io]
# pgqrs = { path = "../pgqrs/crates/pgqrs" }
