[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "s3q"
version = "0.1.0"
description = "Thin Python SDK, CLI, and service layer for s3q"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rajat Venkatesh" }]
dependencies = []

[project.scripts]
s3q = "s3q.cli:main"

[tool.setuptools.packages.find]
include = ["s3q*"]
