[build-system]
requires = ["maturin>=1.6,<2"]
build-backend = "maturin"

[project]
name = "s3q"
version = "0.1.0"
description = "Thin Python SDK, CLI, and service layer for s3q"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Rajat Venkatesh" }]
dependencies = []

[project.scripts]
s3q = "s3q.cli:main"

[tool.maturin]
bindings = "pyo3"
manifest-path = "Cargo.toml"
python-source = "."
module-name = "s3q._native"
